<resources>
    <string name="app_name">Hospital Management</string>
    <string name="title_activity_login_main">LoginMain</string>
    <string name="enter_name">Enter Name</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="general">General</string>
    <string name="entertainment">Entertainment</string>
    <string name="transport">Transport</string>
    <string name="login_text">LOGIN</string>
    <string name="title_activity_ledger">Ledger</string>
    <string name="appointment_summary">Appointment Summary</string>
    <string name="allergies">Allergies</string>
    <string name="prescription">Prescription</string>
    <string name="billing">Billing</string>
    <string name="appointments">Appointments</string>
    <string name="test">Test Button</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="log_out">Log Out</string>
    <string name="welcome">Welcome Back</string>
    <string name="transactions">Transactions</string>
    <string name="surgery_notes">Surgery Notes</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="preferences">Preferences</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="our_services">Our Services</string>
    <string name="about_the_app">About The App V1.0.0</string>
    <string name="the_developers">The Developers</string>
    <string name="summary">Summary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_allergy">Enter The Allergy</string>
    <string name="practitioner_name">Practitioner Name</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_pres">Enter the Prescription</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>