<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:context="hos_app.main_application.MainPatientDashboard">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:title="@string/dashboard_title"
            app:menu="@menu/dashboard_menu"
            />
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.main_application.hos_app.main_application.MainPatientDashboard">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mainCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.95">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:text="Appointments"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/gilroy_bold"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/dataLine1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date : 20/12/2022"
                    app:layout_constraintTop_toBottomOf="@+id/titleTextView"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/dataLine2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reason : Stomach issues"
                    app:layout_constraintTop_toBottomOf="@+id/dataLine1"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/dataLine3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Doctor : Dr Thomas"
                    app:layout_constraintTop_toBottomOf="@+id/dataLine2"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/dataLine4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Follow Up : 29/12/2022"
                    app:layout_constraintTop_toBottomOf="@+id/dataLine3"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainCard"
            app:layout_constraintWidth_percent="0.95">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="16dp"
                android:rowCount="3"
                >

                <com.google.android.material.button.MaterialButton

                    android:id="@+id/button_ledger"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:drawableTop="@drawable/ledger_icon"
                    android:text="@string/title_activity_ledger"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    app:iconSize="24dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_appointments"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:drawableTop="@drawable/appointments_icon"
                    android:text="@string/appointments"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    app:iconSize="24dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_allergies"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:drawableTop="@drawable/allergies_icon"
                    android:text="@string/allergies"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    app:iconSize="24dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_prescriptions"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:drawableTop="@drawable/prescription_24"
                    android:text="@string/prescription"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    app:iconSize="24dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_summary"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:drawableTop="@drawable/summary_icon"
                    android:text="@string/summary"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/white"
                    app:iconSize="24dp" />
            </GridLayout>


        </com.google.android.material.card.MaterialCardView>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_drawer_view"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_drawer_menu" />



</androidx.drawerlayout.widget.DrawerLayout>

