<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:context=".Doctor_allergies">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:title="Admin - Allergy Entry"
                app:menu="@menu/dashboard_menu"
                />
        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        tools:context=".Doctor_allergies">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_layout"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/get_date"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:focusable="true"
                android:hint="@string/enter_date"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="#546E7A"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="4dp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/allergy_layout"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/get_allergy"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:focusable="true"
                android:hint="@string/enter_allergy"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="#546E7A"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="4dp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/practitioner_layout"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allergy_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/get_practitioner"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:focusable="true"
                android:hint="@string/practitioner_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="#546E7A"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="4dp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_allergies"

            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:layout_marginBottom="100dp"
            android:autoSizeTextType="uniform"
            android:elevation="6dp"
            android:gravity="center"
            android:paddingLeft="20dp"

            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:backgroundTint="@color/primary_white"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.99"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>
